mise en jour du seo

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AGENCE DE COMMUNICATION DIGITALE DAKAR | Porokhane Digital Consulting</title>
-  <meta name="description" content="AGENCE DE COMMUNICATION DIGITALE DAKAR — SEO, webmarketing et stratégie digitale. Devis gratuit sous 24h.">
+  <title>AGENCE DE MARKETING DIGITAL DAKAR | Porokhane Digital Consulting</title>
+  <meta name="description" content="AGENCE DE MARKETING DIGITAL DAKAR — SEO, webmarketing et stratégie digitale. Devis gratuit sous 24h.">
   <link rel="icon" type="image/png" href="logo.png">
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -19,16 +19,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta name="keywords" content="agence communication digitale dakar, marketing digital dakar, communication visuelle sénégal, stratégie digitale dakar">
   
   <!-- Open Graph -->
-  <meta property="og:title" content="AGENCE DE COMMUNICATION DIGITALE DAKAR - Porokhane Digital Consulting">
-  <meta property="og:description" content="AGENCE DE COMMUNICATION DIGITALE DAKAR — SEO, webmarketing et stratégie digitale. Devis gratuit sous 24h.">
+  <meta property="og:title" content="AGENCE DE MARKETING DIGITAL DAKAR - Porokhane Digital Consulting">
+  <meta property="og:description" content="AGENCE DE MARKETING DIGITAL DAKAR — SEO, webmarketing et stratégie digitale. Devis gratuit sous 24h.">
   <meta property="og:image" content="https://digital-porokhane.com/logo.png">
   <meta property="og:url" content="https://digital-porokhane.com/">
   <meta property="og:type" content="website">
   
   <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="AGENCE DE COMMUNICATION DIGITALE DAKAR - Porokhane Digital">
-  <meta name="twitter:description" content="AGENCE DE COMMUNICATION DIGITALE DAKAR — SEO, webmarketing et stratégie digitale. Devis gratuit sous 24h.">
+  <meta name="twitter:title" content="AGENCE DE MARKETING DIGITAL DAKAR - Porokhane Digital">
+  <meta name="twitter:description" content="AGENCE DE MARKETING DIGITAL DAKAR — SEO, webmarketing et stratégie digitale. Devis gratuit sous 24h.">
   <meta name="twitter:image" content="https://digital-porokhane.com/logo.png">
   
   <link rel="canonical" href="https://digital-porokhane.com/">
@@ -2014,7 +2014,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container nav-container">
       <div class="nav-logo">
         <a href="https://digital-porokhane.com/">
-          <img src="logo.png" alt="AGENCE DE COMMUNICATION DIGITALE DAKAR - Porokhane Digital Consulting Logo">
+          <img src="logo.png" alt="AGENCE DE MARKETING DIGITAL DAKAR - Porokhane Digital Consulting Logo">
         </a>
       </div>
       
@@ -2089,7 +2089,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <section id="accueil" class="hero">
     <div class="container hero-container">
       <div class="hero-content">
-        <h1>AGENCE DE COMMUNICATION DIGITALE DAKAR – Votre partenaire pour un monde numérique inclusif</h1>
+        <h1>AGENCE DE MARKETING DIGITAL DAKAR – Votre partenaire pour un monde numérique inclusif</h1>
         <p class="hero-subtitle">Porokhane Digital Consulting vous accompagne dans votre transformation digitale avec des solutions innovantes et sur mesure pour booster votre activité.</p>
         <div class="hero-buttons">
           
