mise en jour du seo

--- a/blog.html
+++ b/blog.html
@@ -712,7 +712,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </button>
       <ul class="nav-menu" id="nav-menu">
         <li><a href="https://digital-porokhane.com/" class="nav-link">Accueil</a></li>
-        <li><a href="a-propos.html" class="nav-link">À propos</a></li>
+        <li><a href="blog.html" class="nav-link" style="color: var(--vert);">Actualités</a></li>
         <li class="nav-item">
           <a href="formations.html" class="nav-link">Formations <i class="fas fa-chevron-down"></i></a>
           <ul class="submenu">
@@ -740,7 +740,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <li><a href="ia.html" class="submenu-link">Intelligence Artificielle</a></li>
           </ul>
         </li>
-        <li><a href="blog.html" class="nav-link">Actualités</a></li>
+        
+        <li><a href="offre_cdd_marketing.html" class="nav-link">Emplois</a></li>
         <li>
           <a href="devis.html" class="nav-devis">
             Demandez un devis
