--- a/marketing.html
+++ b/marketing.html
@@ -1009,7 +1009,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </ul>
         </li>
         <li class="nav-item">
-          <a href="marketing.html" class="nav-link">Marketing <i class="fas fa-chevron-down"></i></a>
+          <a href="marketing.html" class="nav-link" style="color: var(--vert);">Marketing <i class="fas fa-chevron-down"></i></a>
           <ul class="submenu">
             <li><a href="audit_express.html" class="submenu-link">Audit Express</a></li>
             <li><a href="site.html" class="submenu-link">Création/Réfonte de site</a></li>
@@ -1027,7 +1027,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <li><a href="ia.html" class="submenu-link">Intelligence Artificielle</a></li>
           </ul>
         </li>
-        <li><a href="blog.html" class="nav-link">Actualités</a></li>
+        
+        <li><a href="offre_cdd_marketing.html" class="nav-link">Emplois</a></li>
         <li>
           <a href="devis.html" class="nav-devis">
             Demandez un devis
