--- a/site.html
+++ b/site.html
@@ -446,7 +446,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <a href="marketing.html" class="nav-link">Marketing <i class="fas fa-chevron-down"></i></a>
           <ul class="submenu">
             <li><a href="audit_express.html" class="submenu-link">Audit Express</a></li>
-            <li><a href="site.html" class="submenu-link">Création/Réfonte de site</a></li>
+            <li><a href="site.html" class="submenu-link" style="color: var(--vert);">Création/Réfonte de site</a></li>
             <li><a href="strategie_digitale.html" class="submenu-link">Stratégie digitale</a></li>
             <li><a href="seo.html" class="submenu-link">Référencement naturel</a></li>
             <li><a href="reseaux_sociaux.html" class="submenu-link">Réseaux sociaux</a></li>
@@ -461,8 +461,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <li><a href="ia" class="submenu-link">Intelligence Artificielle</a></li>
           </ul>
         </li>
-        <li><a href="blog.html" class="nav-link">Actualités</a></li>
-        <!--<li><a href="emplois" class="nav-link">Emplois</a></li>-->
+        
+        <li><a href="offre_cdd_marketing.html" class="nav-link">Emplois</a></li>
         <li>
           <a href="devis.html" class="nav-devis">
             Demandez un devis
