--- a/visible_seo.html
+++ b/visible_seo.html
@@ -440,7 +440,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <li><a href="ia.html" class="submenu-link">Intelligence Artificielle</a></li>
           </ul>
         </li>
-        <li><a href="blog.html" class="nav-link">Actualités</a></li>
+        
+        <li><a href="offre_cdd_marketing.html" class="nav-link">Emplois</a></li>
         <!--<li><a href="emplois" class="nav-link">Emplois</a></li>-->
         <li>
           <a href="devis.html" class="nav-devis">
