--- a/accompagnement.html
+++ b/accompagnement.html
@@ -1115,7 +1115,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </ul>
         </li>
         <li class="nav-item">
-          <a href="accompagnement.html" class="nav-link">Accompagnement <i class="fas fa-chevron-down"></i></a>
+          <a href="accompagnement.html" class="nav-link" style="color: var(--vert);">Accompagnement <i class="fas fa-chevron-down"></i></a>
           <ul class="submenu">
             <li><a href="automatisation.html" class="submenu-link">Automatisation</a></li>
             <li><a href="base_donnee.html" class="submenu-link">Bases de données</a></li>
@@ -1123,7 +1123,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <li><a href="erp.html" class="submenu-link">ERP</a></li>
           </ul>
         </li>
-        <li><a href="blog.html" class="nav-link">Actualités</a></li>
+
+        <li><a href="offre_cdd_marketing.html" class="nav-link">Emplois</a></li>
         <li>
           <a href="devis.html" class="nav-devis">
             Demandez un devis
