--- a/audit_express.html
+++ b/audit_express.html
@@ -601,7 +601,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <li class="nav-item">
           <a href="marketing.html" class="nav-link">Marketing <i class="fas fa-chevron-down"></i></a>
           <ul class="submenu">
-            <li><a href="audit_express.html" class="submenu-link">Audit Express</a></li>
+            <li><a href="audit_express.html" class="submenu-link" style="color: var(--vert);">Audit Express</a></li>
             <li><a href="site.html" class="submenu-link">Création/Réfonte de site</a></li>
             <li><a href="strategie_digitale.html" class="submenu-link">Stratégie digitale</a></li>
             <li><a href="seo.html" class="submenu-link">Référencement naturel</a></li>
@@ -617,8 +617,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <li><a href="ia.html" class="submenu-link">Intelligence Artificielle</a></li>
           </ul>
         </li>
-        <li><a href="blog.html" class="nav-link">Actualités</a></li>
-        <!--<li><a href="emplois" class="nav-link">Emplois</a></li>-->
+        
+        <li><a href="emplois" class="nav-link">Emplois</a></li>
         <li>
           <a href="devis.html" class="nav-devis">
             Demandez un devis
