--- a/automatisation.html
+++ b/automatisation.html
@@ -572,14 +572,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <li class="nav-item">
           <a href="accompagnement.html" class="nav-link">Accompagnement <i class="fas fa-chevron-down"></i></a>
           <ul class="submenu">
-            <li><a href="automatisation.html" class="submenu-link">Automatisation</a></li>
+            <li><a href="automatisation.html" class="submenu-link" style="color: var(--vert);">Automatisation</a></li>
             <li><a href="base_donnee.html" class="submenu-link">Bases de données</a></li>
             <li><a href="erp.html" class="submenu-link">ERP</a></li>
             <li><a href="ia.html" class="submenu-link">Intelligence Artificielle</a></li>
           </ul>
         </li>
-        <li><a href="blog.html" class="nav-link">Actualités</a></li>
-        <!--<li><a href="emplois" class="nav-link">Emplois</a></li>-->
+       
+        <li><a href="emplois" class="nav-link">Emplois</a></li>
         <li>
           <a href="devis.html" class="nav-devis">
             Demandez un devis
