--- a/reseaux_sociaux.html
+++ b/reseaux_sociaux.html
@@ -423,7 +423,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <li><a href="site.html" class="submenu-link">Création/Réfonte de site</a></li>
             <li><a href="strategie_digitale.html" class="submenu-link">Stratégie digitale</a></li>
             <li><a href="seo.html" class="submenu-link">Référencement naturel</a></li>
-            <li><a href="reseaux_sociaux.html" class="submenu-link"> Réseaux sociaux</a></li>
+            <li><a href="reseaux_sociaux.html" class="submenu-link" style="color: var(--vert);">Réseaux sociaux</a></li>
           </ul>
         </li>
         <li class="nav-item">
@@ -435,7 +435,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <li><a href="ia.html" class="submenu-link"> Intelligence Artificielle</a></li>
           </ul>
         </li>
-        <li><a href="blog.html" class="nav-link">Actualités</a></li>
+        
+        <li><a href="offre_cdd_marketing.html" class="nav-link">Emplois</a></li>
         <!--<li><a href="emplois" class="nav-link">Emplois</a></li>-->
         <li>
           <a href="devis.html" class="nav-devis">
