--- a/robotique.html
+++ b/robotique.html
@@ -418,7 +418,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <li class="nav-item">
           <a href="formations.html" class="nav-link">Formations <i class="fas fa-chevron-down"></i></a>
           <ul class="submenu">
-            <li><a href="robotique.html" class="submenu-link">Robotique</a></li>
+            <li><a href="robotique.html" class="submenu-link" style="color: var(--vert);">Robotique</a></li>
             <li><a href="impression_3D.html" class="submenu-link"><i class="fas fa-print"></i> Impression 3D</a></li>
             <li><a href="cybersecurite.html" class="submenu-link">Cybersécurité</a></li>
           </ul>
@@ -442,8 +442,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <li><a href="ia.html" class="submenu-link">Intelligence Artificielle</a></li>
           </ul>
         </li>
-        <li><a href="blog.html" class="nav-link">Actualités</a></li>
-        <!--<li><a href="emplois" class="nav-link">Emplois</a></li>-->
+        <li><a href="offre_cdd_marketing.html" class="nav-link">Emplois</a></li>
         <li>
           <a href="devis.html" class="nav-devis">
             Demandez un devis
