--- a/strategie_digitale.html
+++ b/strategie_digitale.html
@@ -582,7 +582,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <ul class="submenu">
             <li><a href="audit_express.html" class="submenu-link">Audit Express</a></li>
             <li><a href="site.html" class="submenu-link">Création/Réfonte de site</a></li>
-            <li><a href="strategie_digitale.html" class="submenu-link">Stratégie digitale</a></li>
+            <li><a href="strategie_digitale.html" class="submenu-link" style="color: var(--vert);">Stratégie digitale</a></li>
             <li><a href="seo.html" class="submenu-link">Référencement naturel</a></li>
             <li><a href="reseaux_sociaux.html" class="submenu-link">Réseaux sociaux</a></li>
           </ul>
@@ -596,8 +596,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <li><a href="ia.html" class="submenu-link">Intelligence Artificielle</a></li>
           </ul>
         </li>
-        <li><a href="blog.html" class="nav-link">Actualités</a></li>
-        <!--<li><a href="emplois" class="nav-link">Emplois</a></li>-->
+        
+        <li><a href="offre_cdd_marketing.html" class="nav-link">Emplois</a></li>
         <li>
           <a href="devis.html" class="nav-devis">
             Demandez un devis
