--- a/offre_cdd_marketing.html
+++ b/offre_cdd_marketing.html
@@ -7,12 +7,16 @@
   <title>Offre CDD Marketing Digital | Porokhane Digital Consulting</title>
   <meta name="description" content="Porokhane Digital Consulting recrute un Responsable Marketing et Communication Digitale en CDD 6 mois (période d'essai 1 mois). Expérience exigée : 2 ans." />
   <link rel="icon" type="image/png" href="logo.png">
-  <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-MT6DMTW8');</script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-11G8LFMCBG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-11G8LFMCBG');
+</script>
+
 <!-- End Google Tag Manager -->
   
   <!-- Meta keywords -->
