--- a/seo_outil.html
+++ b/seo_outil.html
@@ -41,6 +41,16 @@
         "image": "https://porokhanedigital.com/logo_porokhane_digital.jpg"
     }
     </script>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-11G8LFMCBG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-11G8LFMCBG');
+</script>
   <title>Outils SEO - AGENCE DE COMMUNICATION DIGITALE DAKAR | Porokhane Digital Consulting</title>
     <meta name="description" content="Découvrez les meilleurs outils SEO et conseils d'optimisation à Dakar. Agence de communication digitale spécialisée en référencement naturel et outils SEO professionnels au Sénégal.">
     <meta name="keywords" content="outils SEO Dakar, agence communication digitale, référencement naturel Sénégal, optimisation SEO Dakar, conseils SEO Sénégal, algorithme Google Dakar">
