--- a/base_donnee.html
+++ b/base_donnee.html
@@ -8,11 +8,17 @@
   <meta name="description" content="BASE DE DONNÉES DAKAR — Conception, déploiement et optimisation de bases de données performantes et sécurisées. Administration, migration et formation.">
   <link rel="icon" type="image/png" href="logo.png">
   <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-MT6DMTW8');</script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-11G8LFMCBG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-11G8LFMCBG');
+</script>
+
+
 <!-- End Google Tag Manager -->
   <link rel="canonical" href="https://digital-porokhane.com/base_donnee.html">
   <meta property="og:title" content="BASE DE DONNÉES DAKAR | Porokhane Digital Consulting">
