--- a/formations.html
+++ b/formations.html
@@ -8,12 +8,16 @@
   <meta name="description" content="AGENCE DE COMMUNICATION DIGITALE DAKAR : Formations en Robotique, Impression 3D et Cybersécurité à Dakar. Développez vos compétences avec nos experts.">
   <meta name="keywords" content="AGENCE DE COMMUNICATION DIGITALE DAKAR, formations Dakar, robotique Dakar, impression 3D Dakar, cybersécurité Dakar, formation digitale Sénégal, agence formation Dakar">
   <link rel="icon" type="image/png" href="logo.png">
-  <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-MT6DMTW8');</script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-11G8LFMCBG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-11G8LFMCBG');
+</script>
+
 <!-- End Google Tag Manager -->
   <link rel="canonical" href="https://digital-porokhane.com/formations.html">
   
