--- a/mdd.html
+++ b/mdd.html
@@ -7,12 +7,15 @@
   <title>Projet SEO & Réseaux Sociaux - AGENCE DE COMMUNICATION DIGITALE DAKAR | Porokhane Digital</title>
   <meta name="description" content="Découvrez notre projet d'optimisation SEO et de gestion des réseaux sociaux à Dakar pour améliorer la visibilité en ligne. AGENCE DE COMMUNICATION DIGITALE DAKAR spécialisée en stratégies digitales innovantes au Sénégal.">
   <meta name="keywords" content="AGENCE DE COMMUNICATION DIGITALE DAKAR, SEO Dakar, réseaux sociaux Sénégal, optimisation SEO, gestion réseaux sociaux, visibilité en ligne Dakar, stratégie digitale Sénégal, agence digitale Dakar">
-  <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-MT6DMTW8');</script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-11G8LFMCBG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-11G8LFMCBG');
+</script>
 <!-- End Google Tag Manager -->
   <link rel="canonical" href="https://digital-porokhane.com/mdd.html">
   
