--- a/site.html
+++ b/site.html
@@ -23,12 +23,15 @@
   <meta property="twitter:title" content="Création & Refonte de Sites Web - AGENCE DE COMMUNICATION DIGITALE DAKAR">
   <meta property="twitter:description" content="Création et refonte de sites web modernes à Dakar. Agence de communication digitale spécialisée en développement web, design UX/UI et solutions digitales performantes au Sénégal.">
   <meta property="twitter:image" content="https://porokhanedigital.com/logo_porokhane_digital.jpg">
-  <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-MT6DMTW8');</script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-11G8LFMCBG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-11G8LFMCBG');
+</script>
 <!-- End Google Tag Manager -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="logo.png">
