--- a/strategie_digitale.html
+++ b/strategie_digitale.html
@@ -24,12 +24,15 @@
   <meta property="twitter:image" content="https://porokhanedigital.com/logo_porokhane_digital.jpg">
   <link rel="icon" type="image/png" href="logo.png">
   <link rel="canonical" href="https://porokhanedigital.com/strategie_digitale.html">
-  <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-MT6DMTW8');</script>
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-11G8LFMCBG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-11G8LFMCBG');
+</script>
 <!-- End Google Tag Manager -->
   <meta name="description" content="Stratégie digitale et marketing digital à Dakar. Agence de communication digitale spécialisée en transformation digitale, SEO, Ads, CRM et community management au Sénégal.">
   
