--- a/a-propos.html
+++ b/a-propos.html
@@ -96,7 +96,7 @@
 
     /* Hero Banner */
     .hero-banner {
-      background: linear-gradient(rgba(31,164,122,0.85),rgba(37,99,235,0.85)), url('https://images.unsplash.com/photo-1461749280684-dccba630e2f6?auto=format&fit=crop&w=1500&q=80') center/cover no-repeat;
+      background: linear-gradient(rgba(31,164,122,0.85),rgba(37,99,235,0.85)), url('propos.JPG') center/cover no-repeat;
       color: var(--blanc);
       min-height: 60vh;
       display: flex;
