--- a/index.html
+++ b/index.html
@@ -3118,7 +3118,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
       </div>
       <div class="hero-img">
-        <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80" alt="Transformation digitale">
+        <img src="image-accueil.JPG" alt="Transformation digitale">
       </div>
     </div>
   </section>
@@ -3183,7 +3183,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <!-- Colonne image -->
       <div class="hero-img">
         <div class="parallax-wrapper">
-          <img src="equipe_porokhane.png" alt="Équipe Porokhane Digital">
+          <img src="a" alt="Équipe Porokhane Digital">
         </div>
       </div>
       
