--- a/index.html
+++ b/index.html
@@ -3183,7 +3183,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <!-- Colonne image -->
       <div class="hero-img">
         <div class="parallax-wrapper">
-          <img src="a" alt="Équipe Porokhane Digital">
+          <img src="a-propos.JPG" alt="Équipe Porokhane Digital">
         </div>
       </div>
       
