--- a/index.html
+++ b/index.html
@@ -3118,7 +3118,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
       </div>
       <div class="hero-img">
-        <img src="image-accueil.JPG" alt="Transformation digitale">
+        <img src="accueil11.png" alt="Transformation digitale">
       </div>
     </div>
   </section>
@@ -3183,7 +3183,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <!-- Colonne image -->
       <div class="hero-img">
         <div class="parallax-wrapper">
-          <img src="a-propos.JPG" alt="Équipe Porokhane Digital">
+          <img src="equipe_porokhane.png" alt="Équipe Porokhane Digital">
         </div>
       </div>
       
