--- a/visible_seo.html
+++ b/visible_seo.html
@@ -9,21 +9,21 @@
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://porokhanedigital.com/visible_seo.html">
+  <meta property="og:url" content="https://digital-porokhane.com/visible_seo.html">
   <meta property="og:title" content="Algorithme Google SEO 2024 - AGENCE DE COMMUNICATION DIGITALE DAKAR">
   <meta property="og:description" content="Découvrez les 10 astuces pour être visible avec l'algorithme Google SEO 2024 à Dakar. Agence de communication digitale spécialisée en référencement naturel et optimisation SEO au Sénégal.">
-  <meta property="og:image" content="https://porokhanedigital.com/logo_porokhane_digital.jpg">
+  <meta property="og:image" content="https://digital-porokhane.com/logo_porokhane_digital.jpg">
   <meta property="og:locale" content="fr_SN">
   <meta property="og:site_name" content="Porokhane Digital Consulting">
   
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://porokhanedigital.com/visible_seo.html">
+  <meta property="twitter:url" content="https://digital-porokhane.com/visible_seo.html">
   <meta property="twitter:title" content="Algorithme Google SEO 2024 - AGENCE DE COMMUNICATION DIGITALE DAKAR">
   <meta property="twitter:description" content="Découvrez les 10 astuces pour être visible avec l'algorithme Google SEO 2024 à Dakar. Agence de communication digitale spécialisée en référencement naturel et optimisation SEO au Sénégal.">
-  <meta property="twitter:image" content="https://porokhanedigital.com/logo_porokhane_digital.jpg">
+  <meta property="twitter:image" content="https://digital-porokhane.com/logo_porokhane_digital.jpg">
   <link rel="icon" type="image/png" href="logo.png">
-  <link rel="canonical" href="https://porokhanedigital.com/visible_seo.html">
+  <link rel="canonical" href="https://digital-porokhane.com/visible_seo.html">
  <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-11G8LFMCBG"></script>
 <script>
@@ -43,7 +43,7 @@
       "@type": "LocalBusiness",
       "name": "Porokhane Digital Consulting",
       "description": "Agence de communication digitale à Dakar spécialisée en SEO 2024, algorithme Google, référencement naturel et optimisation de visibilité",
-      "url": "https://porokhanedigital.com",
+      "url": "https://digital-porokhane.com",
       "telephone": "+221 77 XXX XX XX",
       "address": {
           "@type": "PostalAddress",
@@ -67,7 +67,7 @@
           "name": "Dakar, Sénégal"
       },
       "priceRange": "$$",
-      "image": "https://porokhanedigital.com/logo_porokhane_digital.jpg"
+      "image": "https://digital-porokhane.com/logo_porokhane_digital.jpg"
   }
   </script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
