mise en jour des rapports

--- a/index.html
+++ b/index.html
@@ -2963,7 +2963,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- Overlay pour le menu mobile -->
   <div class="menu-overlay" id="menuOverlay"></div>
   
-  <!-- Section Offres Spéciales - Design TOP -->
+  <!-- Section Offres Spéciales - Design TOP 
   <section class="offres-speciales">
     <div class="offres-container">
       <div class="offres-header">
@@ -2973,7 +2973,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
       
       <div class="offres-grid">
-        <!-- Offre 1: Site Vitrine -->
+        Offre 1: Site Vitrine 
         <div class="offre-card offre-premium">
           <div class="offre-image">
             <img src="affiche1.png" alt="Offre Site Vitrine" class="offre-img">
@@ -3032,7 +3032,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </div>
         </div>
 
-        <!-- Offre 2: Réseaux Sociaux -->
+        Offre 2: Réseaux Sociaux 
         <div class="offre-card offre-trending">
           <div class="offre-image">
             <img src="affiche2.png" alt="Offre Réseaux Sociaux" class="offre-img">
@@ -3103,7 +3103,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Hero -->
   <section id="accueil" class="hero">
@@ -3123,7 +3123,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
   </section>
 
-  <!-- Popups promos -->
+  <!-- Popups promos 
   <div class="modal" id="promo1">
     <div class="modal-dialog" role="dialog" aria-modal="true" aria-labelledby="promo1-title">
       <div class="modal-hero" style="background-image:url('affiche.jpg');"></div>
@@ -3167,7 +3167,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="promo-deadline">Dernier délai: 20/09/2025 • Places limitées</div>
       </div>
     </div>
-  </div>
+  </div> -->
 
 
   <!-- Section À propos - Version optimisée -->
