Suppression statistiques page accueil et ajout statistiques complètes page admin

--- a/impression_3D.html
+++ b/impression_3D.html
@@ -45,7 +45,7 @@
     "description": "AGENCE DE COMMUNICATION DIGITALE DAKAR : Formation complète en impression 3D à Dakar.",
     "url": "https://digital-porokhane.com",
     "telephone": "+221710589088",
-    "email": "contact@digital-porokhane.com",
+    "email": "sambasy837@gmail.com",
     "address": {
       "@type": "PostalAddress",
       "streetAddress": "Ngor Extension villa 454",
