--- a/index.html
+++ b/index.html
@@ -2997,8 +2997,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <a href="tel:+221710589088" class="contact-btn phone-btn">
                   <i class="fas fa-phone"></i> +221 71 058 90 88
                 </a>
-                <a href="mailto:contact@digital-porokhane.com" class="contact-btn email-btn">
-                  <i class="fas fa-envelope"></i> contact@digital-porokhane.com
+                <a href="mailto:sambasy837@gmail.com" class="contact-btn email-btn">
+                  <i class="fas fa-envelope"></i> sambasy837@gmail.com
                 </a>
                 <a href="https://wa.me/221710589088" class="contact-btn whatsapp-btn" target="_blank">
                   <i class="fab fa-whatsapp"></i> WhatsApp +221 71 058 90 88
@@ -3056,8 +3056,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <a href="tel:+221710589088" class="contact-btn phone-btn">
                   <i class="fas fa-phone"></i> +221 71 058 90 88
                 </a>
-                <a href="mailto:contact@digital-porokhane.com" class="contact-btn email-btn">
-                  <i class="fas fa-envelope"></i> contact@digital-porokhane.com
+                <a href="mailto:sambasy837@gmail.com" class="contact-btn email-btn">
+                  <i class="fas fa-envelope"></i> sambasy837@gmail.com
                 </a>
                 <a href="https://wa.me/221710589088" class="contact-btn whatsapp-btn" target="_blank">
                   <i class="fab fa-whatsapp"></i> WhatsApp +221 71 058 90 88
@@ -3139,7 +3139,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <div class="modal-ctas">
           <a class="btn-ghost" href="tel:+221710589088"><i class="fas fa-phone"></i> +221 71 058 90 88</a>
-          <a class="btn-ghost" href="mailto:contact@digital-porokhane.com"><i class="fas fa-envelope"></i> Email</a>
+          <a class="btn-ghost" href="mailto:sambasy837@gmail.com"><i class="fas fa-envelope"></i> Email</a>
           <a class="btn-ghost whatsapp" href="https://wa.me/221710589088" target="_blank" rel="noopener"><i class="fab fa-whatsapp"></i> WhatsApp</a>
         </div>
         <div class="promo-deadline">Dernier délai: 20/09/2025 • Places limitées</div>
@@ -3161,7 +3161,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <div class="modal-ctas">
           <a class="btn-ghost" href="tel:+221710589088"><i class="fas fa-phone"></i> +221 71 058 90 88</a>
-          <a class="btn-ghost" href="mailto:contact@digital-porokhane.com"><i class="fas fa-envelope"></i> Email</a>
+          <a class="btn-ghost" href="mailto:sambasy837@gmail.com"><i class="fas fa-envelope"></i> Email</a>
           <a class="btn-ghost whatsapp" href="https://wa.me/221710589088" target="_blank" rel="noopener"><i class="fab fa-whatsapp"></i> WhatsApp</a>
         </div>
         <div class="promo-deadline">Dernier délai: 20/09/2025 • Places limitées</div>
@@ -4926,7 +4926,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <h4>Contact</h4>
           <ul>
             <li><a href="tel:+221710589088 "><i class="fas fa-phone"></i> +221 710589088 </a></li>
-            <li><a href="mailto:contact@digital-porokhane.com"><i class="fas fa-envelope"></i> contact@digital-porokhane.com</a></li>
+            <li><a href="mailto:sambasy837@gmail.com"><i class="fas fa-envelope"></i> sambasy837@gmail.com</a></li>
             <li><a href="https://maps.app.goo.gl/jCAGEpeoCBiSNQSr5" target="_blank" rel="noopener"><i class="fas fa-map-marker-alt"></i> Dakar, Ngor Extension villa 454</a></li>
           </ul>
         </div>
