--- a/ia.html
+++ b/ia.html
@@ -45,7 +45,7 @@
     "description": "AGENCE DE COMMUNICATION DIGITALE DAKAR : Solutions Intelligence Artificielle sur mesure à Dakar.",
     "url": "https://digital-porokhane.com",
     "telephone": "+221710589088",
-    "email": "contact@digital-porokhane.com",
+    "email": "sambasy837@gmail.com",
     "address": {
       "@type": "PostalAddress",
       "streetAddress": "Ngor Extension villa 454",
@@ -582,7 +582,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <h4>Contact</h4>
           <ul>
             <li><a href="tel:+221710589088 "><i class="fas fa-phone"></i> +221 710589088 </a></li>
-            <li><a href="mailto:contact@digital-porokhane.com"><i class="fas fa-envelope"></i> contact@digital-porokhane.com</a></li>
+            <li><a href="mailto:sambasy837@gmail.com"><i class="fas fa-envelope"></i> sambasy837@gmail.com</a></li>
             <li><a href="https://maps.app.goo.gl/jCAGEpeoCBiSNQSr5" target="_blank"><i class="fas fa-map-marker-alt"></i> Dakar, Ngor Extension villa 454</a></li>
           </ul>
         </div>
