--- a/offre_cdd_marketing.html
+++ b/offre_cdd_marketing.html
@@ -1137,7 +1137,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="contact-info">
         <div class="contact-item">
           <i class="fas fa-envelope"></i>
-          <a href="mailto:contact@digital-porokhane.com">contact@digital-porokhane.com</a>
+          <a href="mailto:sambasy837@gmail.com">sambasy837@gmail.com</a>
         </div>
         <div class="contact-item">
           <i class="fab fa-whatsapp"></i>
@@ -1197,7 +1197,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <h4>Contact</h4>
           <ul>
             <li><a href="tel:+221710589088 "><i class="fas fa-phone"></i> +221 710589088 </a></li>
-            <li><a href="mailto:contact@digital-porokhane.com"><i class="fas fa-envelope"></i> contact@digital-porokhane.com</a></li>
+            <li><a href="mailto:sambasy837@gmail.com"><i class="fas fa-envelope"></i> sambasy837@gmail.com</a></li>
             <li><a href="https://maps.app.goo.gl/jCAGEpeoCBiSNQSr5" target="_blank" rel="noopener"><i class="fas fa-map-marker-alt"></i> Dakar, Ngor Extension villa 454</a></li>
           </ul>
         </div>
