--- a/contact.html
+++ b/contact.html
@@ -1244,7 +1244,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="contact-icon"><i class="fas fa-envelope"></i></div>
             <div>
               <h3>Email</h3>
-              <p>responsable.marketing@digital-porokhane.com</p>
+              <p>sambasy837@gmail.com</p>
             </div>
           </div>
           
