--- a/index.html
+++ b/index.html
@@ -4589,7 +4589,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <p style="color: white;font-weight: 30px;">Découvrez nos derniers articles et conseils pour réussir votre transformation digitale</p>
       </div>
       <div class="blog-grid">
-        <!-- Article 1 -->
+        <!-- Article 1 - Transformation Digitale -->
+        <div class="blog-card">
+          <div class="blog-card-img">
+            <img src="transformation-digital.jpg" alt="Transformation digitale des entreprises africaines">
+          </div>
+          <div class="blog-card-content">
+            <div class="blog-meta"><i class="far fa-calendar-alt"></i> 16 décembre 2024 • <i class="far fa-folder"></i> Transformation Digitale</div>
+            <h3>Pourquoi la transformation digitale est un levier indispensable pour les entreprises africaines aujourd'hui</h3>
+            <p>Dans un monde de plus en plus connecté, la transformation digitale n'est plus une option, mais une nécessité pour les entreprises africaines et sénégalaises.</p>
+            <a href="transformation_digitale.html" class="btn btn-secondary"><i class="fas fa-book-open"></i> Lire l'article</a>
+          </div>
+        </div>
+
+        <!-- Article 2 -->
         <div class="blog-card">
           <div class="blog-card-img">
             <img src="blo.jpg" alt="Sécurité WordPress - cadenas sur écran">
@@ -4602,18 +4615,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </div>
         </div>
   
-        <!-- Article 2 -->
-        <div class="blog-card">
-          <div class="blog-card-img">
-            <img src="seo1.png" alt="Google SEO 2024 - algorithme et visibilité">
-          </div>
-          <div class="blog-card-content">
-            <div class="blog-meta"><i class="far fa-calendar-alt"></i> 10 juin 2024 • <i class="far fa-folder"></i> SEO</div>
-            <h3>Algorithme Google SEO 2024 : 10 astuces pour être visible</h3>
-            <p>Découvrez les nouvelles règles Google pour 2024 et 10 astuces pour rendre votre site visible et performant.</p>
-            <a href="visible_seo.html" class="btn btn-secondary"><i class="fas fa-book-open"></i> Lire l'article</a>
-          </div>
-        </div>
+        
   
         <!-- Article 3 -->
         <div class="blog-card">
