--- a/blog.html
+++ b/blog.html
@@ -768,7 +768,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <section class="blog-section">
     <div class="container">
       <div class="blog-grid">
-        <!-- Article 1 -->
+        <!-- Article 1 - Transformation Digitale -->
+        <div class="blog-card">
+          <div class="blog-card-img">
+            <img src="transformation-digital.jpg" alt="Transformation digitale des entreprises africaines">
+          </div>
+          <div class="blog-card-content">
+            <div class="blog-meta"><i class="far fa-calendar-alt"></i> 16 décembre 2024 • <i class="far fa-folder"></i> Transformation Digitale</div>
+            <h3>Pourquoi la transformation digitale est un levier indispensable pour les entreprises africaines aujourd'hui</h3>
+            <p>Dans un monde de plus en plus connecté, la transformation digitale n'est plus une option, mais une nécessité pour les entreprises africaines et sénégalaises.</p>
+            <a href="transformation_digitale.html" class="btn btn-secondary"><i class="fas fa-book-open"></i> Lire l'article</a>
+          </div>
+        </div>
+
+        <!-- Article 2 -->
         <div class="blog-card">
           <div class="blog-card-img">
             <img src="blo.jpg" alt="Sécurité WordPress - cadenas sur écran">
