--- a/audit_express.html
+++ b/audit_express.html
@@ -703,7 +703,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="audit-contact">
       <strong>Contact :</strong> Pour bénéficier de votre audit express :<br>
       <strong>Email :</strong> <a href="mailto:mame.diarra@digital-porokhane.com">mame.diarra@digital-porokhane.com</a><br>
-      <strong>Téléphone :</strong> <a href="tel:+221710589088 ">+221 710589088 </a><br>
+      <strong>Téléphone :</strong> <a href="tel:+221710589088 ">+221 710589088 </a> / <a href="tel:+338306157">+33 830 61 57</a><br>
       <strong>Site web :</strong> <a href="https://digital-porokhane.com" target="_blank">digital-porokhane.com</a>
     </div>
   </main>
@@ -758,6 +758,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <h4>Contact</h4>
           <ul>
             <li><a href="tel:+221710589088 "><i class="fas fa-phone"></i> +221 710589088 </a></li>
+            <li><a href="tel:+338306157"><i class="fas fa-phone"></i> +33 830 61 57</a></li>
             <li><a href="mailto:sambasy837@gmail.com"><i class="fas fa-envelope"></i> sambasy837@gmail.com</a></li>
             <li><a href="https://maps.app.goo.gl/jCAGEpeoCBiSNQSr5" target="_blank"><i class="fas fa-map-marker-alt"></i> Dakar, Ngor Extension villa 454</a></li>
           </ul>
