--- a/index.html
+++ b/index.html
@@ -4720,6 +4720,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <a href="mo.html" class="btn btn-secondary" style="margin-top: 1.2rem;"><i class="fas fa-eye"></i> Voir le contenu</a>
         </div>
       </div>
+      <!-- Projet 4 -->
+      <div class="realisation-card" style="background: #fff; border-radius: 24px; box-shadow: 0 4px 24px rgba(31,164,122,0.08); overflow: hidden; display: flex; flex-direction: column;">
+        <div class="realisation-img" style="height: 200px; overflow: hidden;">
+          <img src="saveurdeco.png" alt="Site web Saveur Deco">
+        </div>
+        <div class="realisation-info" style="padding: 2rem; flex: 1; display: flex; flex-direction: column; justify-content: space-between;">
+          <h3 style="color: var(--bleu); margin-bottom: 0.7rem;">Site Web Saveur Deco</h3>
+          <p style="color: var(--gris-texte); flex: 1;">Développement d'un site web moderne avec React et Node.js pour Saveur Deco, offrant une expérience utilisateur optimale et un design élégant.</p>
+          <a href="https://saveurdeco.fr/" target="_blank" class="btn btn-secondary" style="margin-top: 1.2rem;"><i class="fas fa-external-link-alt"></i> Voir le site</a>
+        </div>
+      </div>
     </div>
   </div>
 </section>
@@ -4928,8 +4939,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <h4>Contact</h4>
           <ul>
             <li><a href="tel:+221710589088 "><i class="fas fa-phone"></i> +221 710589088 </a></li>
+            <li><a href="tel:+338306157"><i class="fas fa-phone"></i> +33 830 61 57 </a></li>
             <li><a href="mailto:sambasy837@gmail.com"><i class="fas fa-envelope"></i> sambasy837@gmail.com</a></li>
-            <li><a href="https://maps.app.goo.gl/jCAGEpeoCBiSNQSr5" target="_blank" rel="noopener"><i class="fas fa-map-marker-alt"></i> Dakar, Ngor Extension villa 454</a></li>
+            <li><a href="https://maps.app.goo.gl/jCAGEpeoCBiSNQSr5" target="_blank"><i class="fas fa-map-marker-alt"></i> Dakar, Ngor Extension villa 454</a></li>
           </ul>
         </div>
       </div>
